src/snapshots/vm__parser__test__parse_closure-2.snap
---
source: src/parser.rs
expression: "closure_expr(\"|a| { a += 1; }\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 15,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: ClosureDeclaration {
                arguments: [
                    (
                        u!("a"),
                        None,
                    ),
                ],
                body: [
                    Ast {
                        node: Assignment {
                            to: Ast {
                                node: Ident(
                                    u!("a"),
                                ),
                                span: LocatedSpan {
                                    offset: 6,
                                    line: 1,
                                    fragment: "a",
                                    extra: (),
                                },
                            },
                            value: Ast {
                                node: Literal(
                                    Int(
                                        1,
                                    ),
                                ),
                                span: LocatedSpan {
                                    offset: 11,
                                    line: 1,
                                    fragment: "1",
                                    extra: (),
                                },
                            },
                            operation: Some(
                                Add,
                            ),
                        },
                        span: LocatedSpan {
                            offset: 6,
                            line: 1,
                            fragment: "a += 1",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "|a| { a += 1; }",
                extra: (),
            },
        },
    ),
)
