src/snapshots/vm__parser__test__parse_closure-3.snap
---
source: src/parser.rs
expression: "closure_expr(\"|a,b,c| { return a - b - c; }\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 29,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: ClosureDeclaration {
                arguments: [
                    u!("a"),
                    u!("b"),
                    u!("c"),
                ],
                body: [
                    Ast {
                        node: Return(
                            Some(
                                Ast {
                                    node: BinaryOp(
                                        Sub,
                                        Ast {
                                            node: Ident(
                                                u!("a"),
                                            ),
                                            span: LocatedSpan {
                                                offset: 17,
                                                line: 1,
                                                fragment: "a",
                                                extra: (),
                                            },
                                        },
                                        Ast {
                                            node: BinaryOp(
                                                Sub,
                                                Ast {
                                                    node: Ident(
                                                        u!("b"),
                                                    ),
                                                    span: LocatedSpan {
                                                        offset: 21,
                                                        line: 1,
                                                        fragment: "b",
                                                        extra: (),
                                                    },
                                                },
                                                Ast {
                                                    node: Ident(
                                                        u!("c"),
                                                    ),
                                                    span: LocatedSpan {
                                                        offset: 25,
                                                        line: 1,
                                                        fragment: "c",
                                                        extra: (),
                                                    },
                                                },
                                            ),
                                            span: LocatedSpan {
                                                offset: 21,
                                                line: 1,
                                                fragment: "b - c",
                                                extra: (),
                                            },
                                        },
                                    ),
                                    span: LocatedSpan {
                                        offset: 17,
                                        line: 1,
                                        fragment: "a - b - c",
                                        extra: (),
                                    },
                                },
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 10,
                            line: 1,
                            fragment: "return a - b - c",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "|a,b,c| { return a - b - c; }",
                extra: (),
            },
        },
    ),
)
