src/snapshots/vm__parser__test__parse_closure-4.snap
---
source: src/parser.rs
expression: "closure_expr(\"|a,b = 123| { return a - b; }\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 29,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: ClosureDeclaration {
                arguments: [
                    (
                        u!("a"),
                        None,
                    ),
                    (
                        u!("b"),
                        Some(
                            Int(
                                123,
                            ),
                        ),
                    ),
                ],
                body: [
                    Ast {
                        node: Return(
                            Some(
                                Ast {
                                    node: BinaryOp(
                                        Sub,
                                        Ast {
                                            node: Ident(
                                                u!("a"),
                                            ),
                                            span: LocatedSpan {
                                                offset: 21,
                                                line: 1,
                                                fragment: "a",
                                                extra: (),
                                            },
                                        },
                                        Ast {
                                            node: Ident(
                                                u!("b"),
                                            ),
                                            span: LocatedSpan {
                                                offset: 25,
                                                line: 1,
                                                fragment: "b",
                                                extra: (),
                                            },
                                        },
                                    ),
                                    span: LocatedSpan {
                                        offset: 21,
                                        line: 1,
                                        fragment: "a - b",
                                        extra: (),
                                    },
                                },
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 14,
                            line: 1,
                            fragment: "return a - b",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "|a,b = 123| { return a - b; }",
                extra: (),
            },
        },
    ),
)
