src/snapshots/vm__parser__test__parse_closure-5.snap
---
source: src/parser.rs
expression: "closure_expr(\"|a = 123,b| { return a - b; }\".into())"
---
Err(
    Failure(
        Stack {
            base: Base {
                location: LocatedSpan {
                    offset: 10,
                    line: 1,
                    fragment: "| { return a - b; }",
                    extra: (),
                },
                kind: Expected(
                    Char(
                        '=',
                    ),
                ),
            },
            contexts: [
                (
                    LocatedSpan {
                        offset: 1,
                        line: 1,
                        fragment: "a = 123,b| { return a - b; }",
                        extra: (),
                    },
                    Context(
                        "Arguments with defults",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "|a = 123,b| { return a - b; }",
                        extra: (),
                    },
                    Context(
                        "Closure arguments",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "|a = 123,b| { return a - b; }",
                        extra: (),
                    },
                    Context(
                        "Closure",
                    ),
                ),
            ],
        },
    ),
)
