src/snapshots/vm__parser__test__parse_closure.snap
---
source: src/parser.rs
expression: "closure_expr(\"|| {return 123;}\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 16,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: ClosureDeclaration {
                arguments: [],
                body: [
                    Ast {
                        node: Return(
                            Some(
                                Ast {
                                    node: Literal(
                                        Int(
                                            123,
                                        ),
                                    ),
                                    span: LocatedSpan {
                                        offset: 11,
                                        line: 1,
                                        fragment: "123",
                                        extra: (),
                                    },
                                },
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 4,
                            line: 1,
                            fragment: "return 123",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "|| {return 123;}",
                extra: (),
            },
        },
    ),
)
