src/snapshots/vm__parser__test__parse_controlflow-2.snap
---
source: src/parser.rs
expression: "controlflow_statement(\"continue 123;\".into())"
---
Err(
    Failure(
        Stack {
            base: Alt(
                [
                    Base {
                        location: LocatedSpan {
                            offset: 9,
                            line: 1,
                            fragment: "123;",
                            extra: (),
                        },
                        kind: Expected(
                            Tag(
                                ";",
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 9,
                            line: 1,
                            fragment: "123;",
                            extra: (),
                        },
                        kind: Expected(
                            Eof,
                        ),
                    },
                ],
            ),
            contexts: [
                (
                    LocatedSpan {
                        offset: 9,
                        line: 1,
                        fragment: "123;",
                        extra: (),
                    },
                    Context(
                        "Terminator",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "continue 123;",
                        extra: (),
                    },
                    Context(
                        "Controlflow statement",
                    ),
                ),
            ],
        },
    ),
)
